# fiiish-rs

./: .gitignore  BuildPipeline.md  README.md  TOUCHME.md  package_macos.sh  release_latest_release_to_itchio.sh  rustfmt.toml
dummy-data/: LICENSE.md  background_fs.glsl  colored_fs.glsl  colored_vs.glsl  coloredtextured_fs.glsl  coloredtextured_vs.glsl  default_fs.glsl  default_vs.glsl  fontcolored_fs.glsl  paklist.txt  textured_vs.glsl  white_fs.glsl
fiiish-content/: LICENSE.md  game.asset_config.yaml
fiiish-data/: 0000_ILoveFiiish.nzne  0000_ILoveFiiishAndRust.nzne  0000_Start.nzne  0001_ZigZag.nzne  0002_ZigZag-B.nzne  0003_ZigZag-C.nzne  0004_ZigZag-D.nzne  0005_ZigZag-E.nzne  0006_ZigZag-F.nzne  0010_Tunnel.nzne  0020_Funnel.nzne  1001_SeaweedAgain.nzne  2001_SmoothBump.nzne  2002_BigRockFlow.nzne  2003_QuickDip.nzne  2004_Curves.nzne  2005_GoUp.nzne  5001_Anchor.nzne  5002_PinkAndPurple.nzne  (+50 more)
fiiish-release-tool/: Cargo.toml  README.md  TODO.md
fiiish-release-tool/src/: lib.rs  main.rs  manifest.rs  release.rs  repository.rs
fiiish-rs/: .gitignore  Cargo.toml  Info.plist  Justfile  TODO.md  build.rs  build_release.sh  create_cargo_lock_without_version.sh  pack_fish-data.sh  update_todo_for_release.sh
fiiish-rs/Assets.xcassets/AppIcon.appiconset/: Contents.json
fiiish-rs/src/: audio.rs  debug_renderer.rs  fiiish.rs  fiiish_main.rs  lib.rs  math.rs  overlap_checker.rs  renderer.rs  system.rs  ui.rs  window.rs  window_update_context.rs
fiiish-rs/src/audio/: audio_fileloader_system.rs  music.rs  sound.rs
fiiish-rs/src/audio/music/: music_apple.rs  music_stub.rs
fiiish-rs/src/audio/sound/: sound_apple.rs  sound_stub.rs
fiiish-rs/src/fiiish/: app_update_context.rs  counter_dialog.rs  demo.rs  effect_ids.rs  entities.rs  entity_update_context.rs  fiiish_app.rs  font_ids.rs  game.rs  game_ui.rs  layer_ids.rs  mixel.rs  pause_dialog.rs  player.rs  result_dialog.rs  settings_dialog.rs  shape.rs  shape_cache.rs  zone.rs  zone_manager.rs
fiiish-rs/src/fiiish/entities/: background.rs  coin.rs  entity.rs  entity_configuration.rs  entity_ids.rs  entity_manager.rs  entity_types.rs  fish.rs  obstacle.rs  player.rs
fiiish-rs/src/math/: matrix22.rs  matrix32.rs  matrix33.rs  matrix44.rs  vector2.rs  vector3.rs
fiiish-rs/src/renderer/: animated_texture.rs  debug.rs  effect.rs  font.rs  material.rs  material_builder.rs  program.rs  text_layout.rs  texture.rs  texture_atlas.rs  uniform.rs
fiiish-rs/src/system/: filesystem.rs  filesystem_archive.rs  filesystem_disk.rs  filesystem_empty.rs  filesystem_layered.rs  filesystem_memory.rs  filesystem_stream.rs  filesystem_stream_archive.rs  filesystem_stream_disk.rs  filesystem_stream_empty.rs  filesystem_stream_memory.rs  serializer.rs
fiiish-rs/src/ui/: ui_block.rs  ui_button.rs  ui_element.rs  ui_element_base.rs  ui_element_container.rs  ui_event.rs  ui_gravity_box.rs  ui_hbox.rs  ui_image.rs  ui_label.rs  ui_renderer.rs  ui_spacer.rs  ui_toggle_button.rs  ui_vbox.rs
(+47 files in other folders)
