[package]
name = 	 	"fiiish-release-tool"
version =	"0.1.30-alpha" # :TODO: bump once released
edition = 	"2021"

[[bin]]
name = "fiiish-release-tool"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
git2 = "0.13.18"
toml_edit = "0.9.1"
semver = "1.0"
regex = "1.5.3"
unescape = "0.1.0"
