[package]
name = "fiiish-rs"
version = "0.1.0"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>"]
edition = "2018"

build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="fiiish"
path="src/fiiish_main.rs"

[dependencies]
glutin = "0.26.0"
anyhow = "1.0.40"
chrono = "0.4.19"
derivative = "2.2.0"
image = "0.23.14"
regex = "1.4.5"
crc = "1.8.1"
rand = "0.8.3"

[build-dependencies]
gl_generator = "0.14.0"
omt = "0.1.2"
