[package]
name = "fiiish-rs"
version = "0.6.15-test"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>"]
edition = "2021"

build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] 
name="fiiish"
path="src/fiiish_main.rs"

[features]
default = []
standalone = []

[dependencies]
glutin = "0.27.0"
anyhow = "1.0"
chrono = "0.4.19"
derivative = "2.2.0"
image = "0.23.14"
crc = "2.1.0"
rand = "0.8.4"
lazy_static = "1.4.0"
dirs-next = "2.0.0"

# consider removing
regex = "1.5.4"


[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"

[build-dependencies]
gl_generator = "0.14.0"
omt = "0.2"

[profile.dev]
# split-debuginfo = "unpacked"
