[package]
name = "fiiish-rs"
version = "0.6.28-dev"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>"]
edition = "2021"

build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="fiiish"
path="src/fiiish_main.rs"

[features]
#default = []
default = [ "audio-apple" ]
standalone = []
audio-apple = [ "oml-audio/use_apple" ]
audio-miniaudio = [ "oml-audio/use_miniaudio" ]

[dependencies]
glutin = "0.27.0"
anyhow = "1.0"
chrono = "0.4.19"
derivative = "2.2.0"
image = "0.23.14"
crc = "2.1.0"
rand = "0.8.4"
lazy_static = "1.4.0"
dirs-next = "2.0.0"

# consider removing
regex = "1.5.4"

[dependencies.oml-audio]
version = "0.6.5-alpha"
features = []
# features = [ "apple" ]

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"

[build-dependencies]
gl_generator = "0.14.0"
omt = "0.4.0-alpha"

[profile.dev]
# split-debuginfo = "unpacked"

[patch.crates-io]
#oml-audio = { git = 'https://github.com/andreasOM/oml-audio/' }
#ep-miniaudio-sys = { git = 'https://github.com/andreasOM/miniaudio-rs/' }
#miniaudio = { git = 'https://github.com/andreasOM/miniaudio-rs/' }
